--- a/WebSite1/web.config
+++ b/WebSite1/web.config
@@ -22,7 +22,7 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-  <add key="localhost.Service" value="http://localhost:2574/WebServiceDemo/Service.asmx"/>
+  <add key="test.Service" value="http://rideshare.somee.com/Service.asmx"/>
   </appSettings>
   <connectionStrings/>
   <system.web>
