--- a/RideShare/app/src/main/AndroidManifest.xml
+++ b/RideShare/app/src/main/AndroidManifest.xml
@@ -8,6 +8,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+
+    <permission
+        android:name="com.example.general.rideshare.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+
+    <uses-permission android:name="com.example.general.rideshare.permission.MAPS_RECEIVE"/>
 
 
     <uses-feature
