--- a/WebService1/WebService1/Web.config
+++ b/WebService1/WebService1/Web.config
@@ -1,12 +1,4 @@
 ﻿<?xml version="1.0"?>
-<!-- 
-    Note: As an alternative to hand editing this file you can use the 
-    web admin tool to configure settings for your application. Use
-    the Website->Asp.Net Configuration option in Visual Studio.
-    A full list of settings and comments can be found in 
-    machine.config.comments usually located in 
-    \Windows\Microsoft.Net\Framework\vx.x\Config 
--->
 <configuration>
 
     <configSections>
@@ -25,38 +17,32 @@
     <appSettings/>
     <connectionStrings/>
     <system.web>
-        <!-- 
-            Set compilation debug="true" to insert debugging 
-            symbols into the compiled page. Because this 
-            affects performance, set this value to true only 
-            during development.
-        -->
-        <compilation debug="false">
+        <compilation debug="true" >
           <assemblies>
             <add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-            <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
             <add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+            <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
             <add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
           </assemblies>
         </compilation>
-        <!--
-          The <authentication> section enables configuration 
-          of the security authentication mode used by 
-          ASP.NET to identify an incoming user. 
-        -->
-        <authentication mode="Windows" />
-        <!--
-           The <customErrors> section enables configuration 
-           of what to do if/when an unhandled error occurs 
-           during the execution of a request. Specifically, 
-           it enables developers to configure html error pages 
-           to be displayed in place of a error stack trace.
+    <!--
+      The <authentication> section enables configuration 
+      of the security authentication mode used by 
+      ASP.NET to identify an incoming user. 
+    -->
+    <authentication mode="Windows" />
+    <!--
+       The <customErrors> section enables configuration 
+       of what to do if/when an unhandled error occurs 
+       during the execution of a request. Specifically, 
+       it enables developers to configure html error pages 
+       to be displayed in place of a error stack trace.
 
-           <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
-             <error statusCode="403" redirect="NoAccess.htm" />
-             <error statusCode="404" redirect="FileNotFound.htm" />
-           </customErrors>
-        -->
+       <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
+         <error statusCode="403" redirect="NoAccess.htm" />
+         <error statusCode="404" redirect="FileNotFound.htm" />
+       </customErrors>
+    -->
       <pages>
         <controls>
           <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -79,12 +65,6 @@
         <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4"
                   type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
           <providerOption name="CompilerVersion" value="v3.5"/>
-          <providerOption name="WarnAsError" value="false"/>
-        </compiler>
-        <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4"
-                  type="Microsoft.VisualBasic.VBCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-          <providerOption name="CompilerVersion" value="v3.5"/>
-          <providerOption name="OptionInfer" value="true"/>
           <providerOption name="WarnAsError" value="false"/>
         </compiler>
       </compilers>
