--- a/WebService1/WebService1/Web.config
+++ b/WebService1/WebService1/Web.config
@@ -15,8 +15,18 @@
       </sectionGroup>
     </configSections>  
     <appSettings/>
-    <connectionStrings/>
+  <connectionStrings>
+    <add name="RouteDatabase" connectionString="workstation id=RouteDatabase.mssql.somee.com;packet size=4096;user id=kinjalsolanki_SQLLogin_1;pwd=jtm68zn1bh;data source=RouteDatabase.mssql.somee.com;persist security info=False;initial catalog=RouteDatabase"/>
+  </connectionStrings>
     <system.web>
+
+      <webServices>
+        <protocols>
+          <add name="HttpGet"/>
+          <add name="HttpPost"/>
+        </protocols>
+      </webServices>
+      
         <compilation debug="true" >
           <assemblies>
             <add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
