--- a/RideShare/app/src/main/AndroidManifest.xml
+++ b/RideShare/app/src/main/AndroidManifest.xml
@@ -41,7 +41,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".SearchRoute"
+            android:label="@string/title_activity_search_route" >
+        </activity>
     </application>
 
 </manifest>
