--- a/RideShare/app/build.gradle
+++ b/RideShare/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile files('libs/ksoap2-android-assembly-3.1.1-jar-with-dependencies.jar')
+    compile 'com.google.maps.android:android-maps-utils:0.3+'
 }
