--- a/WebService1/WebService1/WebService1.csproj
+++ b/WebService1/WebService1/WebService1.csproj
@@ -13,6 +13,7 @@
     <RootNamespace>WebService1</RootNamespace>
     <AssemblyName>WebService1</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -53,7 +54,9 @@
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
     <Content Include="Service1.asmx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
