--- a/RideShare/app/build.gradle
+++ b/RideShare/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.5.87'
     compile files('libs/ksoap2-android-assembly-3.1.1-jar-with-dependencies.jar')
     compile 'com.google.maps.android:android-maps-utils:0.3+'
+    compile files('libs/asmack-android-8-4.0.7.jar')
 }
